--- a/analise_alugeis.ipynb
+++ b/analise_alugeis.ipynb
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
     "plt.rcParams[\"figure.autolayout\"] = True\n",
     "\n",
     "# Definindo valores do grafico\n",
-    "sns.barplot(x = df_estados[\"Qtd_Imoveis\"], y = df_estados[\"Estado\"], orient = \"h\").set_title(\"Quantidade de Imoveis\", fontsize=16)\n",
+    "sns.barplot(x = df_estados[\"Qtd_Imoveis\"], y = df_estados[\"Estado\"], orient = \"h\").set_title(\"Quantidade de Imoveis por Estado\", fontsize=16)\n",
     "\n",
     "# Salvando grafico em formato png\n",
     "plt.savefig(\"Estados.png\", format = \"png\")\n",
